--- a/devoir 2023/DS1.html
+++ b/devoir 2023/DS1.html
@@ -14281,7 +14281,7 @@ b. 1<br>
 c. 2<br>
 d. sans calculatrice, je ne peux pas savoir.</p>
 </blockquote>
-<p>Q2 : Pour tout  $k$  entier relatif, le nombre 2k+5 est :</p>
+<p>Q2 : Pour tout  $k$  entier relatif, le nombre $2k+5$ est :</p>
 <blockquote><p>a. un multiple de 5.<br>
 b. impair.<br>
 c. divisible par 2.<br>
@@ -14306,10 +14306,10 @@ c. 524 370<br>
 d. 524 371</p>
 </blockquote>
 <p>Q6 :  Soit $x$ un nombre réel, et $P(x) : x^2=4,  Q(x): x=2$.</p>
-<blockquote><p>a. P(x) est suffisant pour Q(x).<br>
-b. P(x) est nécessaire pour Q(x).<br>
-c. P(x) est nécessaire et suffisant pour Q(x).<br>
-d. P(x) n'est ni nécessaire ni suffisant pour Q(x).</p>
+<blockquote><p>a. $P(x)$ est suffisant pour $Q(x)$.<br>
+b. $P(x)$ est nécessaire pour $Q(x)$.<br>
+c. $P(x)$ est nécessaire et suffisant pour $Q(x)$.<br>
+d. $P(x)$ n'est ni nécessaire ni suffisant pour $Q(x)$.</p>
 </blockquote>
 
 </div>
@@ -14325,11 +14325,9 @@ d. P(x) n'est ni nécessaire ni suffisant pour Q(x).</p>
 <p>Le but de cet exercice est de valider (ou non) le raisonnement suivant :</p>
 <blockquote><p>
 S’il y a de l’oxygène alors il y a combustion.<br>
- 
-Il y a de l’oxygène ou bien il y a de l’azote.</p>
-<p>Il n’y a pas d’azote.</p>
-<p>Donc il y a combustion.  
-</p>
+Il y a de l’oxygène ou bien il y a de l’azote.<br>
+Il n’y a pas d’azote.</p>
+<p>Donc il y a combustion.</p>
 </blockquote>
 <p>On prendra comme proposition élémentaires :</p>
 <blockquote><p>$o$ : il y a de l’oxygène<br>
@@ -14350,7 +14348,7 @@ $a$ : il y a de l’azote</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="EXERCICE-2-:-Expression-Bool&#233;enne-(3-points)">EXERCICE 2 : Expression Bool&#233;enne (3 points)<a class="anchor-link" href="#EXERCICE-2-:-Expression-Bool&#233;enne-(3-points)">&#182;</a></h3>$$\begin{array}{|c|c|c|c|}
+<h3 id="EXERCICE-2-:-Expression-logique-(3-points)">EXERCICE 2 : Expression logique (3 points)<a class="anchor-link" href="#EXERCICE-2-:-Expression-logique-(3-points)">&#182;</a></h3>$$\begin{array}{|c|c|c|c|}
 \hline
 a &amp;  b  &amp; c  &amp; f(a,b,c) \\
 \hline
@@ -14378,15 +14376,15 @@ $$<p>Donner puis simplifier l'expression logique de $f(a,b,c)$.</p>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="EXERCICE-4-:-Fonction-inhibition.-(3-points)">EXERCICE 4 : Fonction inhibition. (3 points)<a class="anchor-link" href="#EXERCICE-4-:-Fonction-inhibition.-(3-points)">&#182;</a></h3><p>Soit la fonction inhibition de a par b,notée * et définie par:</p>
+<h3 id="EXERCICE-4-:-Fonction-inhibition.-(3-points)">EXERCICE 4 : Fonction inhibition. (3 points)<a class="anchor-link" href="#EXERCICE-4-:-Fonction-inhibition.-(3-points)">&#182;</a></h3><p>Soit la fonction inhibition de $a$ par $b$,notée $*$ et définie par:</p>
 $$a*b=a\wedge \overline{b}$$<p>où $a$ et $b$ sont des propositions et $1$ est la tautologie, $0$ l’antilogie.</p>
 <ul>
 <li>Exprimer $\overline a$ uniquement à l’aide de $1$ et de l’opérateur $*$.</li>
 <li>Exprimer $a \wedge b$ uniquement à l’aide de $1$ et de l’opérateur $*$.</li>
 <li>Soient $a,b,c$ trois propositions:<ul>
 <li>Développer $(a*b)*c$</li>
-<li>Développer $a*(b*c)$
-L’opérateur $*$ est-il associatif ? 
+<li>Développer $a*(b*c)$<br>
+L’opérateur $*$ est-il associatif ?<br>
 Éventuellement, donner des valeurs de $a,b,c$ pour justifier votre réponse.</li>
 </ul>
 </li>
@@ -14414,11 +14412,11 @@ $$ 23 \times 51 + 35 = 1208$$<p>Sans effectuer de division, répondre aux questi
 </ul>
 $$\begin{array}{|c|c|c|c|c|c|c|}
 \hline
-x \equiv [6] &amp;  &amp;  &amp;  &amp;  &amp;  &amp;  \\
+x \equiv \dots [6] &amp;  &amp;  &amp;  &amp;  &amp;  &amp;  \\
 \hline
-x^2 \equiv [6] &amp;  &amp;  &amp;  &amp;  &amp;  &amp;  \\
+x^2 \equiv \dots [6] &amp;  &amp;  &amp;  &amp;  &amp;  &amp;  \\
 \hline
-x^2+ x + 1  \equiv [6] &amp;  &amp;  &amp;  &amp;  &amp;  &amp;  \\
+x^2+ x + 1  \equiv \dots [6] &amp;  &amp;  &amp;  &amp;  &amp;  &amp;  \\
 \hline
 \end{array}
 $$<ul>
@@ -14441,31 +14439,26 @@ $$<ul>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="EXERCICE-8-:-Divisibilit&#233;-(2-points)">EXERCICE 8 : Divisibilit&#233; (2 points)<a class="anchor-link" href="#EXERCICE-8-:-Divisibilit&#233;-(2-points)">&#182;</a></h3><p>Déterminer les entiers naturels $n$ tel que $$\dfrac{3n + 2}{n+4} \in \mathbb{N}$$</p>
+<h3 id="EXERCICE-8-:-Divisibilit&#233;-(2-points)">EXERCICE 8 : Divisibilit&#233; (2 points)<a class="anchor-link" href="#EXERCICE-8-:-Divisibilit&#233;-(2-points)">&#182;</a></h3><p>Déterminer les couples d'entiers relatifs $(x;y)$ tels que $x^2 -16 y^2=-7$.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="EXERCICE-9-:-Division-euclidienne-(2-points)">EXERCICE 9 : Division euclidienne (2 points)<a class="anchor-link" href="#EXERCICE-9-:-Division-euclidienne-(2-points)">&#182;</a></h3><p>On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont 13 et 98.</p>
+<h3 id="EXERCICE-9-:-Division-euclidienne-(2-points)">EXERCICE 9 : Division euclidienne (2 points)<a class="anchor-link" href="#EXERCICE-9-:-Division-euclidienne-(2-points)">&#182;</a></h3><p>On divise un entier naturel $n$ par $152$, puis par $147$. Les quotients sont égaux et les restes respectifs sont $13$ et $98$.</p>
 <p>Quel est cet entier naturel $n$ ?</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="EXERCICE-10-:-Congruence-et-divisibilit&#233;-(2-points)">EXERCICE 10 : Congruence et divisibilit&#233; (2 points)<a class="anchor-link" href="#EXERCICE-10-:-Congruence-et-divisibilit&#233;-(2-points)">&#182;</a></h3><p>Montrer que pour tout entier naturel n, $-2\times 3^{2n + 2} + 2^{4n + 2}$ est divisible par 7.</p>
+<h3 id="EXERCICE-10-:-Congruence-et-divisibilit&#233;-(2-points)">EXERCICE 10 : Congruence et divisibilit&#233; (2 points)<a class="anchor-link" href="#EXERCICE-10-:-Congruence-et-divisibilit&#233;-(2-points)">&#182;</a></h3><p>Montrer que pour tout entier naturel $n$, $-2\times 3^{2n + 2} + 2^{4n + 2}$ est divisible par 7.</p>
 
 </div>
 </div>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h3 id="EXERCICE-11-:-Congruence-et-divisibilit&#233;-(2-points)">EXERCICE 11 : Congruence et divisibilit&#233; (2 points)<a class="anchor-link" href="#EXERCICE-11-:-Congruence-et-divisibilit&#233;-(2-points)">&#182;</a></h3><p>Calculer $79^{2023} [7]$</p>
-
-</div>
-</div>
-<div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="EXERCICE-11-:-Congruence-(2-points)">EXERCICE 11 : Congruence (2 points)<a class="anchor-link" href="#EXERCICE-11-:-Congruence-(2-points)">&#182;</a></h3><p>Calculer $79^{2023} [7]$</p>
 
 </div>
 </div>
